Removing unused code